# Mamba2VisualNavEstimator

./: .gitmodules  main.py  mamba2.py  notes.md  requirments.txt
kan/: requirements.txt
kan/models/: fc_kan.py  skan.py
kan/output/mnist/efficient_kan/: efficient_kan__mnist__full.json  efficient_kan__mnist__full.pth
torch_conv_kan/: pyproject.toml
